Correct the spacing on contact

--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,6 @@ footer {
     padding: 1rem 2rem;
     height: auto; }
     #contact div {
-      margin-bottom: 3rem; }
+      margin-bottom: 1rem; }
   footer {
     font-size: .65rem; } }
